Make use of newly introduced GLSL listing style

--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -118,6 +118,7 @@
 % Change captions of listings
 \renewcommand{\lstlistingname}{Auflistung}
 \renewcommand{\lstlistlistingname}{Auflistungsverzeichnis}
+\usepackage{glslListings}
 %---------------------------------------------------------------------------
 
 % Hyperref Package (Create links in a pdf)
