Move the table's labels after their captions to ensure they can be referenced correctly (by \ref)

--- a/doc/inc/70_prototype.tex
+++ b/doc/inc/70_prototype.tex
@@ -134,9 +134,9 @@ vec2 castRay(in vec3 rayOrigin, in vec3 rayDirection, in float maxDistance, in f
 }
 \end{lstlisting}
 
-\begin{table}[H]\label{table:sphere_tracing_distance}
+\begin{table}[H]
     \centering
-    \caption{Vergleich des Distanz-Parameters anhand einer Beispielszene.}
+    \caption{Vergleich des Distanz-Parameters anhand einer Beispielszene.}\label{table:sphere_tracing_distance}
     \begin{tabular}{p{0.3\textwidth}p{0.3\textwidth}p{0.3\textwidth}}
         \toprule
             \textbf{Distanz: \textit{100.0}} &
@@ -155,9 +155,9 @@ vec2 castRay(in vec3 rayOrigin, in vec3 rayDirection, in float maxDistance, in f
     \end{tabular}
 \end{table}
 
-\begin{table}[H]\label{table:sphere_tracing_precision}
+\begin{table}[H]
     \centering
-    \caption{Vergleich des Präzisions-Parameters anhand einer Beispielszene.}
+    \caption{Vergleich des Präzisions-Parameters anhand einer Beispielszene.}\label{table:sphere_tracing_precision}
     \begin{tabular}{p{0.3\textwidth}p{0.3\textwidth}p{0.3\textwidth}}
         \toprule
             \textbf{Präzision: \textit{0.00001}} &
@@ -174,10 +174,10 @@ vec2 castRay(in vec3 rayOrigin, in vec3 rayDirection, in float maxDistance, in f
     \end{tabular}
 \end{table}
 
-\begin{table}[H]\label{table:sphere_tracing_steps}
+\begin{table}[H]
     \centering
     \caption{Vergleich des Parameters zur Bestimmung der Anzahl der
-        Durchgänge anhand einer Beispielszene.}
+        Durchgänge anhand einer Beispielszene.}\label{table:sphere_tracing_steps}
     \begin{tabular}{p{0.3\textwidth}p{0.3\textwidth}p{0.3\textwidth}}
         \toprule
             \textbf{Anzahl Schritte: \textit{100}} &
