Actually include meeting minutes, add meeting minutes from 2015-11-02

--- a/doc/inc/static/attachment/10_meeting_minutes.tex
+++ b/doc/inc/static/attachment/10_meeting_minutes.tex
@@ -9,3 +9,9 @@
 \VerbatimInput[label=20151004]{inc/static/attachment/minutes/20151004}
 \newpage
 \VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151011}
+\newpage
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151018}
+\newpage
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151025}
+\newpage
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151102}
