Provide new bibliography entries

--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -1,4 +1,30 @@
 
+@article{reiner_smi_2011,
+	title = {{SMI} 2011: {Full} {Paper}: {Interactive} {Modeling} of {Implicit} {Surfaces} {Using} a {Direct} {Visualization} {Approach} with {Signed} {Distance} {Functions}},
+	volume = {35},
+	issn = {0097-8493},
+	shorttitle = {{SMI} 2011},
+	url = {http://dx.doi.org/10.1016/j.cag.2011.03.010},
+	doi = {10.1016/j.cag.2011.03.010},
+	abstract = {Modeling appealing virtual scenes is an elaborate and time-consuming task, requiring not only training and experience, but also powerful modeling tools providing the desired functionality to the user. In this paper, we describe a modeling approach using signed distance functions as an underlying representation for objects, handling both conventional and complex surface manipulations. Scenes defined by signed distance functions can be stored compactly and rendered directly in real-time using sphere tracing. Hence, we are capable of providing an interactive application with immediate visual feedback for the artist, which is a crucial factor for the modeling process. Moreover, dealing with underlying mathematical operations is not necessary on the user level. We show that fundamental aspects of traditional modeling can be directly transferred to this novel kind of environment, resulting in an intuitive application behavior, and describe modeling operations which naturally benefit from implicit representations. We show modeling examples where signed distance functions are superior to explicit representations, but discuss the limitations of this approach as well.},
+	number = {3},
+	urldate = {2015-11-14},
+	journal = {Comput. Graph.},
+	author = {Reiner, Tim and Mückl, Gregor and Dachsbacher, Carsten},
+	month = jun,
+	year = {2011},
+	keywords = {Distance functions, Implicit surface rendering, Implicit surfaces, Interactive modeling},
+	pages = {596--603}
+}
+
+@techreport{parker_single_1998,
+	title = {Single sample soft shadows},
+	abstract = {A simple extension to ray tracing is presented that creates visually plausible “soft ” shadows with little extra computation. Although these soft shadows are approximate, they are robust and have penumbra widths that behave in a believable way, including accurate placement of singularities where penumbra width is zero. The method has continuous behavior in space and time, so it is appropriate for both static and dynamic image generation. 1},
+	author = {Parker, Steven and Shirley, Peter and Smits, Brian},
+	year = {1998},
+	file = {Citeseer - Full Text PDF:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/BNM3IF8G/Parker et al. - 1998 - Single sample soft shadows.pdf:application/pdf;Citeseer - Snapshot:/home/so/.zotero/zotero/d79e17nl.default/zotero/storage/GBN84ZS4/summary.html:text/html}
+}
+
 @book{pharr_gpu_2005,
 	series = {{GPU} {Gems}},
 	title = {{GPU} {Gems} 2: {Programming} {Techniques} {For} {High}-{Performance} {Graphics} {And} {General}-{Purpose} {Computation}},
