--- a/doc/inc/40_procedure.tex
+++ b/doc/inc/40_procedure.tex
@@ -50,6 +50,8 @@ Die Phasen der Erarbeitung der theoretischen Grundlagen sowie die Erstellung der
     \caption{Zeitplan; Der Titel stellt Jahreszahlen, der Untertitel Semesterwochen dar}
 \end{figure}
 \todo[inline]{Update schedule}
+\todo[inline]{Add deadline for rough draft for end ov nov / beginning
+    of dec}
 
 \subsubsection{Projektstart}
 \label{subsubsec:kick_off}
