Fix a small typo

--- a/doc/inc/60/62_description_implicit_surfaces.tex
+++ b/doc/inc/60/62_description_implicit_surfaces.tex
@@ -152,7 +152,7 @@ bestimmt.\\
 \\
 Gemäss~\cite{hart_sphere_1994} kommt daher auch der Name Sphere Tracing: Die
 Schnittpunkte eines (Licht-) Strahles werden durch eine Folge von negativen
-Hüllkörper (``unbounding volumes'') --- bzw.\ in diesem Fall Kugeln
+Hüllkörpern (``unbounding volumes'') --- bzw.\ in diesem Fall Kugeln
 (``unbounding spheres'') --- beschrieben.\\
 \\
 Da~\cite{hart_ray_1989} die Darstellung von Fraktale im dreidimensionalen Raum
