Advance version history

--- a/doc/inc/static/versions.tex
+++ b/doc/inc/static/versions.tex
@@ -60,4 +60,11 @@
         Minutes vom 02.11.2015, Erweiterung des
         Kapitels~\ref{chap:prototype}, Abarbeiten von TODO-Notizen
     }
+    \vhEntry{0.13}{07.11.2015}{SO}{Ausführen der Meeting Minutes vom
+        02.11.2015, Erweiterung des Kapitels~\ref{chap:prototype}
+    }
+    \vhEntry{0.14}{15.11.2015}{SO}{Erarbeiten des
+        Kapitels~\ref{sec:rendering_implicit_surfaces_shadows},
+        Erweiterung des Kapitels~\ref{chap:prototype} um weiche Schatten
+    }
 \end{versionhistory}
