Update meeting minutes

--- a/doc/inc/static/attachment/10_meeting_minutes.tex
+++ b/doc/inc/static/attachment/10_meeting_minutes.tex
@@ -15,3 +15,7 @@
 \VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151025}
 \newpage
 \VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151102}
+\newpage
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151115}
+\newpage
+\VerbatimInput[label=20151011]{inc/static/attachment/minutes/20151206}
