Keep up versioning

--- a/doc/inc/static/versions.tex
+++ b/doc/inc/static/versions.tex
@@ -65,6 +65,16 @@
     }
     \vhEntry{0.14}{15.11.2015}{SO}{Erarbeiten des
         Kapitels~\ref{sec:rendering_implicit_surfaces_shadows},
-        Erweiterung des Kapitels~\ref{chap:prototype} um weiche Schatten
+        Erweiterung des Kapitels~\ref{chap:prototype} um weiche Schatten, 
+        Erstellen und Hinzufügen von Bildmaterial zu Kapiteln~\ref{subsec:ray_marching}
+        und~\ref{subsec:sphere_tracing}.
+    }
+    \vhEntry{0.15}{29.11.2015}{SO}{Komplette Überarbeitung des Bildmaterials zu
+        Kapiteln~\ref{subsec:ray_marching} und~\ref{subsec:sphere_tracing}.
+    }
+    \vhEntry{0.16}{06.12.2015}{SO}{Nachführen von Meeting Minutes und der
+        Versionierung. Überarbeiten des Zeitplanes, weiter Überarbeitung des
+        Bildmaterials. Hinzufügen des Kapitels~\ref{sec:shading}, Hinzufügen
+        einer Einleitung zu Kapitel~\ref{chap:theoretical_background}.
     }
 \end{versionhistory}
